Adding dockefile for backend deploy
